[package]
name = "libtor-derive"
version = "0.1.0"
authors = ["Alekos Filini <alekos.filini@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"

[lib]
proc-macro = true
